Corrigiendo rutas src

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
          <a href="#" class="btn" id="creador">Más detalles</a>
       </div>
       <div class="image">
-         <img src="img/design.png" alt="">
+         <img src="img/Avatar/design.png" alt="">
       </div>
    </section>
 
