--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
    <div class="suscribete">
       <h3>Suscribete para más contenido</h3>
-      <p>La pscilogía está en las ventas, la arquitectura, el trabajo, la proramación, los colores, todo lo que veas o vivas te genera algo. ¿Por qué no aprender más?</p>
+      <p>La psicología está en las ventas, la arquitectura, el trabajo, la proramación, los colores, todo lo que veas o vivas te genera algo. ¿Por qué no aprender más?</p>
       <form action="">
          <input type="email" placeholder="Ingresa tu email">
          <input type="submit" value="sucribete">
@@ -156,7 +156,7 @@
          <div class="caja">
             <!--<i class="fa-solid fa-car"></i>-->
             <div class="carro">
-               <img id="autos" src="/img/crrs/0.jpg" alt="">
+               <img id="autos" src="./img/crrs/0.jpg" alt="">
             </div>
             <div class="comentarios">
                <h3>Carros</h3>
