Corrigiendo errores ortograficos

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <img src="./img/hobbies/matematicas.png" alt="">
             <h3>Ciencias naturales</h3>
             <p>¿Sabias que para ser bueno en matemáticas lo mejor es ser bueno en dibujo? ¿Por qué los números son como son?
-            ¿Cuántos cuadrados imaginó Pitagoras para su teorema? Para los probelmas físicos y matemáticas las gráficas no son opcionales.
+            ¿Cuántos cuadrados imaginó Pitagoras para su teorema? Para los problemas físicos y matemáticos las gráficas no son opcionales.
             </p>
          
             <a href="#" class="btn">Ver más</a>
@@ -125,7 +125,7 @@
 
    <div class="suscribete">
       <h3>Suscribete para más contenido</h3>
-      <p>La psicología está en las ventas, la arquitectura, el trabajo, la proramación, los colores, todo lo que veas o vivas te genera algo. ¿Por qué no aprender más?</p>
+      <p>La psicología está en las ventas, la arquitectura, el trabajo, la programación, los colores, todo lo que veas o vivas te genera algo. ¿Por qué no aprender más?</p>
       <form action="">
          <input type="email" placeholder="Ingresa tu email">
          <input type="submit" value="sucribete">
