Estableciendo icono página

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <title>Diego Giraldo</title>
    <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+   <link rel="icon" href="./img/Avatar/logo1.png">
 </head>
 <body>
    <div id="box" class="fondo">
