Corrigiendo tamaños responsivos y ruta logo header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    </div>
    <header>
       <a href="#" class="logo">
-         <img src="/img/logo1.png" alt="">
+         <img src="./img/Avatar/logo1.png" alt="">
          <Span>Diego</Span>Giraldo
       </a>
 
@@ -120,19 +120,17 @@
                <a href="#" class="btn"><i class="fa-solid fa-cube"></i> IMPRESION 3D</a>
             </div>
          </div>
+         <div class="suscribete">
+            <h3>Suscribete para más contenido</h3>
+            <p>La psicología está en las ventas, la arquitectura, el trabajo, la programación, los colores, todo lo que veas o
+               vivas te genera algo. ¿Por qué no aprender más?</p>
+            <form action="">
+               <input type="email" placeholder="Ingresa tu email">
+               <input type="submit" value="sucribete">
+            </form>
+         </div>
       </div>
    </section>
-
-
-   <div class="suscribete">
-      <h3>Suscribete para más contenido</h3>
-      <p>La psicología está en las ventas, la arquitectura, el trabajo, la programación, los colores, todo lo que veas o vivas te genera algo. ¿Por qué no aprender más?</p>
-      <form action="">
-         <input type="email" placeholder="Ingresa tu email">
-         <input type="submit" value="sucribete">
-      </form>
-   </div>
-
 
    <section class="coleccion" id="coleccion">
       <h1 class="heading">
