--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
    </section>
 
    <section class="contactos" id="contactos">
-      <div class="image">
+      <!--<div class="image">
          <img src="img/Avatar/astro.png" alt="">
-      </div>
+      </div>-->
       <form action="">
          <h1 class="heading"> Contacto</h1>
          <div class="inputcaja">
