Modificacion descripcion dibujos

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
             <div class="comentarios">
                <h3>Animales</h3>
                <div class="stars">
-                  <p>Desearía ser un animal. <br> Porque el miedo más grande de los seres humanos es la soledad, porque no puedes escapar de ella tú solo, dependes de
-                  alguien más, por eso desearía ser un animal.</p>
+                  <p>Desearía ser un animal. <br>Porque el humano tiene la necesidad de socializar, esa necesidad es la mayor debilidad y no hay manera de satisfacerla por si mismo. Lo sé, un circulo vicioso. <!--Porque el miedo más grande de los seres humanos es la soledad, porque no puedes escapar de ella tú solo, dependes de
+                  alguien más, por eso desearía ser un animal.--></p>
                </div>
                <button  id="camAnimals" class="btn">VER OTRO</button>
             </div>
@@ -160,7 +160,7 @@
             <div class="comentarios">
                <h3>Carros</h3>
                <div class="stars">
-                  <p>"la vida se mide en logros, no sólo en años" <br> <strong>-Bruce McLaren</strong>  <br>
+                  <p>"La vida se mide en logros, no sólo en años" <br> <strong>-Bruce McLaren</strong>  <br>
                   "Tanto si piensas que puedes, como si piensas que no puedes, estás en lo cierto" <br> <strong>-Henry Ford</strong> 
                   </p>
                </div>
