--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          <a href="#" class="btn" id="creador">Más detalles</a>
       </div>
       <div class="image">
-         <img src="img/Avatar/design.png" alt="">
+         <img src="./img/Avatar/design.png" alt="">
       </div>
    </section>
 
