Añadiendo ids y clases a formulario suscribete

--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
             <h3>Suscribete para más contenido</h3>
             <p>La psicología está en las ventas, la arquitectura, el trabajo, la programación, los colores, todo lo que veas o
                vivas te genera algo. ¿Por qué no aprender más?</p>
-            <form action="">
-               <input type="email" placeholder="Ingresa tu email">
-               <input type="submit" value="sucribete">
+            <form id="suscribeteform" action="">
+               <input id="correo" type="email" name="correo" placeholder="Ingresa tu email">
+               <input type="submit" id="enviarcorreo" name="enviarcorreo" value="sucribete">
             </form>
          </div>
       </div>
