Agregando id a formContact para la funcion validar

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <!--<div class="image">
          <img src="img/Avatar/astro.png" alt="">
       </div>-->
-      <form action="">
+      <form id="contactForm" action="">
          <h1 class="heading"> Contacto</h1>
          <div class="inputcaja">
             <input type="text" required name="Nombre" id="inputNombre">
