Agregando link instagram

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
       <div class="caja">
          <h3 class="">Buscame en</h3>
          <a target="_blank" href="https://www.linkedin.com/in/diego-goart/">Linkedin</a>
-         <a href="">Instagram</a>
+         <a href="https://www.instagram.com/dg.collector/">Instagram</a>
          <a target="_blank" href="https://github.com/Diegogo1991">GitHub</a>
       </div> 
 
