Edicion texto inicio

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
    <section class="inicio" id="inicio">
       <div class="content">
          <h3>¿Por qué soñamos?</h3><span>Diego Giraldo</span>
-         <p>Nuestra afanada vida diaria nos hace despertar para llevar a cabo nuestros deberes, el trabajo, con la familia y demás cosas. En la escuela nos enseñaron los más de 11 sistemas que controla nuestro cerebro, pero si el cerebro es tan capaz e inteligente ¿Por qué sueña? El sueño tiene tantas funciones que es tan importante como cuando pensamos mientras estamos despiertos, no por nada las personas más exitosas suelen decir cosas como: "Lucha por tus sueños."
+         <p>Nuestra afanada vida diaria nos hace despertar para llevar a cabo nuestros deberes, del trabajo, con la familia y demás cosas. En la escuela nos enseñaron los más de 11 sistemas que controla nuestro cerebro, pero si el cerebro es tan capaz e inteligente ¿Por qué sueña? El sueño tiene muchas funciones y es tan importante como cuando pensamos mientras estamos despiertos, no por nada las personas más exitosas suelen decir cosas como: "Lucha por tus sueños."
          </p>
          <span>De hecho, Ayrton Senna, el exitoso piloto de la F1 una vez dijo:</span> 
          <p>"Si una persona no tiene sueños no tiene razón de vivir, soñar es necesario aún cuando el sueño va más allá de la realidad, para mi soñar es uno de los principios de la vida."
